step command + steps stat

--- a/src/main/resources/static/charts.html
+++ b/src/main/resources/static/charts.html
@@ -10,8 +10,13 @@
 
 <h4>По дням</h4>
 <canvas id="myChart" width="480" height="200"></canvas>
+
+<h4>Этапы/дни</h4>
+<canvas id="myChart3" width="480" height="200"></canvas>
+
 <h4>По неделям</h4>
 <canvas id="myChart2" width="480" height="200"></canvas>
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
