--- a/src/main/resources/static/charts.html
+++ b/src/main/resources/static/charts.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>График</title>
-</head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+    <title>Графики</title>
+</head>
 <body>
 
 
-<h4>По дням</h4>
+<div class="btn-group" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-outline-primary" onclick="drawPerDay()">По дням</button>
+    <button type="button" class="btn btn-outline-primary" onclick="drawPerWeek()">По неделям</button>
+</div>
+
 <canvas id="myChart" width="480" height="200"></canvas>
 
-<h4>Этапы/дни</h4>
 <canvas id="myChart3" width="480" height="200"></canvas>
 
-<h4>По неделям</h4>
-<canvas id="myChart2" width="480" height="200"></canvas>
+<canvas id="myChart4" width="480" height="200"></canvas>
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -23,7 +31,8 @@
         integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg=="
         crossorigin="anonymous"></script>
 <script src="/js/chart.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
 </body>
 </html>
