--- a/src/main/resources/static/charts.html
+++ b/src/main/resources/static/charts.html
@@ -19,11 +19,11 @@
     <button type="button" class="btn btn-outline-primary" onclick="drawPerWeek()">По неделям</button>
 </div>
 
-<canvas id="myChart" width="480" height="200"></canvas>
+<canvas id="perDayChart" width="480" height="200"></canvas>
 
-<canvas id="myChart3" width="480" height="200"></canvas>
+<canvas id="stepsChart" width="480" height="200"></canvas>
 
-<canvas id="myChart4" width="480" height="200"></canvas>
+<canvas id="salaryChart" width="480" height="200"></canvas>
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
