review today for mentors updated to cancel review

--- a/src/main/resources/static/task2.html
+++ b/src/main/resources/static/task2.html
@@ -195,8 +195,8 @@
                                                                                 style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
     </h3>
 
-    <p><strong>ВНИМАНИЕ!</strong> Не нужно смотреть все видео из плейлиста, не нужно проходить курс до конца и читать всю книгу! У тебя 10
-        дней на решение задачи, поэтому не трать время. Сверься со списком тем выше и посмотри выборочно материалы только по этим темам! Для
+    <p><strong>ВНИМАНИЕ!</strong> Не нужно смотреть все видео из плейлиста, не нужно проходить курс до конца и читать всю книгу! Сверься со
+        списком тем выше и посмотри выборочно материалы только по этим темам! Для
         того, чтобы сэкономить свое время, выбери один источник из предложенных и используй его для решения ТЗ.</p>
 
     <ol>
