new landing page, transfer pdf blob and tg nick

--- a/src/main/resources/static/task1.html
+++ b/src/main/resources/static/task1.html
@@ -17,8 +17,8 @@
 
     <!-- End Jekyll SEO tag -->
 
-    <!--  <link rel="stylesheet" href="/css/style.css">-->
-    <!--    <style class="anchorjs"></style><link rel="stylesheet" href="/css/style.css">-->
+    <!--  <link rel="stylesheet" href="/cssandjs/style.cssandjs">-->
+    <!--    <style class="anchorjs"></style><link rel="stylesheet" href="/cssandjs/style.cssandjs">-->
     <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
     <!-- Setup Google Analytics -->
